@@ -135,5 +135,7 @@ units.meters=m
 units.metersPerYear=m/year
 units.years=years
 
+controlPanel.minHeight=100
+
 #===============================================================================
 # end of file
